# docs/swagger.json
@@ -347,6 +347,99 @@
                     }
                 }
             }
+        },
+        "/transaction-booking-cancel/{id}": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transaction-controller"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Booking",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.BookingSaveResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/transaction-booking/{id}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transaction-controller"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Kost",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Data Kost",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.BookingSaveRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.BookingSaveResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -379,6 +472,26 @@
                 }
             }
         },
+        "request.BookingSaveRequest": {
+            "type": "object",
+            "properties": {
+                "detailPenghuni": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.PenghuniRequest"
+                    }
+                },
+                "jumlahPenghuni": {
+                    "type": "integer"
+                },
+                "kamarId": {
+                    "type": "integer"
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
         "request.KamarRequest": {
             "type": "object",
             "properties": {
@@ -388,10 +501,30 @@
                 "kostId": {
                     "type": "integer"
                 },
-                "nomorKamar": {
+                "namaKamar": {
                     "type": "string"
                 },
                 "statusKamar": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.PenghuniRequest": {
+            "type": "object",
+            "properties": {
+                "jenisKelamin": {
+                    "type": "string"
+                },
+                "namaPenghuni": {
+                    "type": "string"
+                },
+                "nomorHp": {
+                    "type": "integer"
+                },
+                "nomorKtp": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
@@ -441,6 +574,26 @@
                 }
             }
         },
+        "response.BookingSaveResponse": {
+            "type": "object",
+            "properties": {
+                "detailPenghuni": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.PenghuniResponse"
+                    }
+                },
+                "jumlahPenghuni": {
+                    "type": "integer"
+                },
+                "namaKost": {
+                    "type": "string"
+                },
+                "statusBooking": {
+                    "type": "string"
+                }
+            }
+        },
         "response.KamarResponse": {
             "type": "object",
             "properties": {
@@ -471,6 +624,26 @@
                     "type": "string"
                 },
                 "typeKost": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.PenghuniResponse": {
+            "type": "object",
+            "properties": {
+                "jenisKelamin": {
+                    "type": "string"
+                },
+                "namaPenghuni": {
+                    "type": "string"
+                },
+                "nomorHp": {
+                    "type": "integer"
+                },
+                "nomorKtp": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 }
             }
