# modules/transaction/request/bookingrequest.go
@@ -1,0 +1,8 @@
+package request
+
+type BookingSaveRequest struct {
+	KamarId        int               `json:"kamarId"`
+	UserId         int               `json:"userId"`
+	Jumlah         int               `json:"jumlahPenghuni"`
+	DetailPenghuni []PenghuniRequest `json:"detailPenghuni"`
+}
