# modules/transaction/response/penghuniresponse.go
@@ -1,0 +1,9 @@
+package response
+
+type PenghuniResponse struct {
+	NamaPenghuni     string `json:"namaPenghuni"`
+	NomorHp          int    `json:"nomorHp"`
+	JenisKelamin     string `json:"jenisKelamin"`
+	StatusPerkawinan string `json:"status"`
+	NomorKtp         string `json:"nomorKtp"`
+}
